[gd_scene load_steps=4 format=3 uid="uid://caelcc6noqyl0"]

[ext_resource type="Script" path="res://Scripts/enemies/ghost.gd" id="1_m2txo"]
[ext_resource type="PackedScene" uid="uid://budvtjpxf8mof" path="res://Modelos/character-ghost.glb" id="2_wybwp"]

[sub_resource type="BoxShape3D" id="BoxShape3D_4byra"]
size = Vector3(0.333563, 0.625808, 0.221542)

[node name="ghost" type="CharacterBody3D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_m2txo")

[node name="model" parent="." instance=ExtResource("2_wybwp")]

[node name="shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.370821, 0)
shape = SubResource("BoxShape3D_4byra")

[node name="timer_angle" type="Timer" parent="."]
autostart = true

[node name="timer_speed" type="Timer" parent="."]
autostart = true

[node name="timer_rot" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="timer_angle" to="." method="_on_angle_tick"]
[connection signal="timeout" from="timer_speed" to="." method="_on_speed_tick"]
[connection signal="timeout" from="timer_rot" to="." method="_on_rot_tick"]
